--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 # Inside of setup.cfg
 [metadata]
-name = Data-Stats
+name = Data_Stats
 version = 0.1
 author = Iñigo Ugarte & Paulo Cagigal
 description = This library consists of obtaining data from an open database "statsbombpy"
