--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
-name = Data_Stats
-version = 0.2
+name = DataStats
+version = 0.1
 author = Iñigo Ugarte & Paulo Cagigal
 description = This library consists of obtaining data from an open database "statsbombpy"
 url = https://github.com/pauloo1010/Paulo-Inigo-Progra
